<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SettingsActivity">


   <include
   layout="@layout/toolbar"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>
   
   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/settings_zoom_edit_layout"
       style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/settings_zoom_title"
       android:layout_marginTop="@dimen/double_margin"
       android:layout_marginStart="@dimen/margin_to_parent"
       android:layout_marginEnd="@dimen/margin_to_parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="@+id/simple_toolbar"
       app:helperTextEnabled="true"
       app:errorEnabled="true">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/settings_zoom_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="number" />

   </com.google.android.material.textfield.TextInputLayout>



   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/settings_radius_edit_layout"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/margin_to_parent"
       android:hint="@string/settings_search_radius_title"
       app:errorEnabled="true"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/settings_zoom_edit_layout">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/settings_radius_edit_text"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="number"
          />

   </com.google.android.material.textfield.TextInputLayout>

   <Switch
       android:id="@+id/settings_switch"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/margin_to_parent"
       android:switchPadding="@dimen/margin_to_parent"
       android:text="@string/settings_notification_title"
       android:textSize="18sp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/settings_radius_edit_layout" />

   <Button
       android:id="@+id/save_settings"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/margin_to_parent"
       android:backgroundTint="@color/colorPrimaryDark"
       android:textColor="@color/White"
       android:text="@string/settings_save_text"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/settings_switch"
       />












</androidx.constraintlayout.widget.ConstraintLayout>