<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PlaceDetailsActivity"
    android:orientation="vertical">


    <ImageView
    android:id="@+id/rest_img"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:ignore="MissingConstraints">

    </ImageView>
    
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/rest_img"
        app:layout_constraintBottom_toBottomOf="@id/rest_img"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/White"
        tools:ignore="MissingConstraints"
        android:clickable="true"
        />

    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/restaurantInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/rest_img"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/restaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="loudioiiiiiiiiiiiiiiii"
            android:maxWidth="200dp"
            android:textColor="@color/White"
            android:ellipsize="end"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        
        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:theme="@style/RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:numStars="3"
            app:layout_constraintStart_toEndOf="@id/restaurantName"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/restaurantAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:text="2, rue des moulins "
            android:textColor="@color/White"
            android:ellipsize="end"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restaurantName"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/restaurantActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/restaurantInfo"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/callButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/fui_transparent"
            android:textColor="@color/colorPrimaryDark"
            android:drawableTop="@drawable/baseline_call_black_24"
            android:drawableTint="@color/colorPrimaryDark"
            android:text="@string/restaurant_item_call"
            android:paddingBottom="5dp"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/likeButton"
            app:layout_constraintBottom_toBottomOf="@+id/likeButton" />

        <Button
            android:id="@+id/likeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/fui_transparent"
            android:textColor="@color/colorPrimaryDark"
            android:drawableTop="@drawable/baseline_star_rate_black_24"
            android:drawableTint="@color/colorPrimaryDark"
            android:text="@string/restaurant_item_like"
            android:paddingBottom="5dp"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/websiteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/fui_transparent"
            android:textColor="@color/colorPrimaryDark"
            android:drawableTop="@drawable/baseline_public_black_24"
            android:drawableTint="@color/colorPrimaryDark"
            android:text="@string/restaurant_item_website"
            android:paddingBottom="5dp"
            android:paddingTop="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            app:layout_constraintStart_toEndOf="@id/likeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/likeButton"
            app:layout_constraintBottom_toBottomOf="@id/likeButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/restaurantActions"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/Divider"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/restaurantRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>